---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(col, 2, 3) as result FROM (VALUES ('hello'), ('world'), ('test')) AS t(col)\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| ell    |",
        "| orl    |",
        "| est    |",
        "+--------+",
    ],
)
